test/langtools/tools/javac/valhalla/primitive-classes/CheckMakeDefault.out
CheckMakeDefault.java:9:20: compiler.err.abstract.value.class.cannot.be.inner: (compiler.misc.abstract.value.class: Point.A)
CheckMakeDefault.java:39:36: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: boolean, int)
CheckMakeDefault.java:40:37: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: byte, boolean)
CheckMakeDefault.java:41:37: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: char, boolean)
CheckMakeDefault.java:42:35: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: int, boolean)
CheckMakeDefault.java:43:39: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: short, boolean)
CheckMakeDefault.java:44:37: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: long, boolean)
CheckMakeDefault.java:45:39: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: float, boolean)
CheckMakeDefault.java:46:41: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: double, boolean)
CheckMakeDefault.java:47:37: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.String, int)
CheckMakeDefault.java:48:40: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: byte[], int)
11 errors
